<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/maido"
            android:contentDescription="@string/data_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/detail_separator"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/detail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/data_title"
            android:drawableStart="@drawable/ic_subject_black"
            android:drawablePadding="4dp"
            android:textColor="@android:color/black"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            app:layout_constraintTop_toBottomOf="@id/detail_separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:textSize="16sp"
            android:text="@string/data_description"
            app:layout_constraintTop_toBottomOf="@id/detail_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_score"
            android:paddingBottom="@dimen/nav_header_vertical_spacing"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:text="@string/data_score"
            android:drawableStart="@drawable/ic_star_black"
            android:drawablePadding="4dp"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/detail_description"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detail_type"
            android:paddingBottom="@dimen/nav_header_vertical_spacing"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:text="@string/data_type"
            android:drawableStart="@drawable/ic_label_black"
            android:drawablePadding="4dp"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/detail_description"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>